--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "spectra-tool"
 version = "0.1.0"
 description = "Photoabsorption cross sections and spectral overlap — easy CLI and Python API"
-authors = [{ name="Your Name", email="you@example.com" }]
+authors = [{ name="Federico J. Hernandez", email="f.hernandez@qmul.ac.uk.com" }]
 readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.9"
@@ -20,7 +20,7 @@ plots = ["matplotlib>=3.7"]
 dev = ["pytest>=7", "coverage[toml]>=7"]
 
 [project.urls]
-Homepage = "https://example.com/"
+#Homepage = "https://example.com/"
 
 [project.scripts]
 spectra-tool = "spectra_tool.cli:main"
